[package]
name = "rusty-ssl"
version = "0.1.0"
edition = "2024"
authors = ["Ayoub Biferdou"]
description = "Secure Rust-based HTTP server with SSL/TLS and TTL management"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
config = "0.15.11"
dashmap = "6.1.0"
hyper = "1.6.0"
rustls = "0.23.27"
rustls-pemfile = "2.2.0"
serde = "1.0.219"
thiserror = "2.0.12"
tokio = "1.45.0"
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.16.0"
