[package]
name = "rusty-ssl"
version = "0.1.0"
edition = "2024"
authors = ["Ayoub Biferdou"]
description = "Secure Rust-based HTTP server with SSL/TLS and TTL management"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
dashmap = "6.1.0"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
rustls = "0.23.27"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-rustls = "0.26.2"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "fmt"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
